# SymDAG

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simulated_bayes.py  simulated_greedy.py  simulated_symdag.py
src/symdag/: __init__.py  _bayes_core.py  _core.py  _greedy_core.py  api.py  bayes.py  cli.py  config.py  dependencies.py  estimator.py  greedy.py  metrics.py  results.py  simulation.py
