[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symdag"
version = "0.1.0"
description = "SymDAG package for interpretable nonlinear causal discovery via symbolic regression."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dill",
  "joblib",
  "networkx",
  "numpy",
  "pandas",
  "patsy",
  "pgmpy",
  "pysips",
  "scikit-learn",
  "scipy",
]

[project.optional-dependencies]
full = [
  "gadjid",
  "pybnesian",
]
metrics = [
  "gadjid",
]
warmstart = [
  "pybnesian",
]

[project.scripts]
symdag = "symdag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
